--- a/contact.html
+++ b/contact.html
@@ -15,36 +15,35 @@
         <nav class="navbar">
             <ul>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/about1.html">About</a>
+                    <a class="link" href="/about1.html">About</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/contact.html">Contact</a>
+                    <a class="link" href="/contact.html">Contact</a>
                 </li>
                 <li class="remove-style">
-                        <a class="link" href="http://127.0.0.1:5500/qulification.html">Qulification</a>
+                    <a class="link" href="/qulification.html">Qulification</a>
                 </li>
                 <li class="remove-style">
-                        <a class="link"  href="http://127.0.0.1:5500/skill.html">Skill</a>
+                    <a class="link" href="/skill.html">Skill</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/programing_lang.html">Programming Language</a>
-                    
+                    <a class="link" href="/programing_lang.html">Programming Language</a>
                 </li>
                 <li class="remove-style">
-                        <a class="link"  href="http://127.0.0.1:5500/language.html">Language</a>
+                    <a class="link" href="/language.html">Language</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link"  href="http://127.0.0.1:5500/Project.html">Project</a>
+                    <a class="link" href="/Project.html">Project</a>
                 </li>
             </ul>
         </nav>
     </header> 
     <h1 style="display: flex; justify-content: center;color: yellow; margin-top: 150px; font-size: 40px;">Contact Me</h1>
     <p style="display:flex; justify-content: center; color: yellow; font-size: 25px; ">Gmail:-swarnalatarana21@navgurukul.org<br>
-    Ph no-8144932515<br>
+    Ph no:-8144932515<br>
     Address:-
-    Navgurukul sarjapur
-    campus,bengaluru.Karnataka,
-    India,pin:-560035</p> 
+    Navgurukul Sarjapur
+    Campus,Bengaluru.Karnataka,
+    India,Pin:-560035</p> 
 </body>
 </html>
