--- a/about1.html
+++ b/about1.html
@@ -15,30 +15,30 @@
         <nav class="navbar">
             <ul>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/about1.html">About</a>
+                    <a class="link" href="/about1.html">About</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/contact.html">Contact</a>
+                    <a class="link" href="/contact.html">Contact</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/qulification.html">Qulification</a>
+                    <a class="link" href="/qulification.html">Qulification</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/skill.html">Skill</a>
+                    <a class="link" href="/skill.html">Skill</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/programing_lang.html">Programming Language</a>
+                    <a class="link" href="/programing_lang.html">Programming Language</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/language.html">Language</a>
+                    <a class="link" href="/language.html">Language</a>
                 </li>
                 <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/Project.html">Project</a>
+                    <a class="link" href="/Project.html">Project</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <h1 style=" display: flex; justify-content: center; margin-top: 150px; color: yellow; font-size: 40px;">About</h1>
+    <h1 style=" display: flex; justify-content: center; margin-top: 150px; color: yellow; font-size: 45px;">About</h1>
     <i style="display: flex;  justify-content:center ; color: yellow; font-size: 25px;">"I am Swarnalata Rana from
         odisha. softwore developer from
         Navgurukul. <br>I am highly motivated to grow professionally.I have good
