--- a/skill.html
+++ b/skill.html
@@ -14,25 +14,25 @@
     <nav class="navbar">
         <ul>
             <li class="remove-style">
-                <a class="link" href="http://127.0.0.1:5500/about1.html">About</a>
+                <a class="link" href="/about1.html">About</a>
             </li>
             <li class="remove-style">
-                <a class="link" href="http://127.0.0.1:5500/contact.html">Contact</a>
+                <a class="link" href="/contact.html">Contact</a>
             </li>
             <li class="remove-style">
-                    <a class="link" href="http://127.0.0.1:5500/qulification.html">Qulification</a>
+                <a class="link" href="/qulification.html">Qulification</a>
             </li>
             <li class="remove-style">
-                    <a class="link"  href="http://127.0.0.1:5500/skill.html">Skill</a>
+                <a class="link" href="/skill.html">Skill</a>
             </li>
             <li class="remove-style">
-                <a class="link" href="http://127.0.0.1:5500/programing_lang.html">Programming Language</a>               
+                <a class="link" href="/programing_lang.html">Programming Language</a>
             </li>
             <li class="remove-style">
-                    <a class="link"  href="http://127.0.0.1:5500/language.html">Language</a>
+                <a class="link" href="/language.html">Language</a>
             </li>
             <li class="remove-style">
-                <a class="link"  href="http://127.0.0.1:5500/Project.html">Project</a>
+                <a class="link" href="/Project.html">Project</a>
             </li>
         </ul>
     </nav>
@@ -40,10 +40,11 @@
     <h1 style="display: flex;justify-content: center; color: yellow; margin-top: 150px;margin-right: 6rem; font-size: 50px;">Skill</h1>
     <div style="text-align:center;">
         <ul style="display: flex;justify-content: center; color: yellow; font-size: 35px; display: inline-block; margin: -10px;">
-        <li>Leadership</li>
         <li>Communication</li>
-        <li>Timemanagemen</li>
-        <li>Open Minded</li>
+        <li>Time Management</li>
+        <li>Problem Solving</li>
+        <li>Leadership</li>
+
         </ul>
     </div>
 </body>
