--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div class="content-section">
         <h1>Hello, I'm <mark>Swarnalata Rana</mark></h1>
-        <h4>I'm a Softwore Devloper</h4>
+        <h4>I'm a Software Developer</h4>
     </div>
     <div class="image">
         <img src="image.jpeg" alt="Girl in a jacket" style="width: 350px; ;">
